[gd_scene load_steps=6 format=3 uid="uid://fboexr73pt1h"]

[ext_resource type="Texture2D" uid="uid://cn18etnduf77k" path="res://PixelOcean.png" id="2_i4n4n"]
[ext_resource type="FontFile" uid="uid://cuwevlkiu8qjg" path="res://Panic.ttf" id="2_nwvu0"]
[ext_resource type="Script" path="res://MainMenuScript.gd" id="2_xb7i7"]
[ext_resource type="Theme" uid="uid://bbgh6pyqlmw03" path="res://new_theme.tres" id="3_qy7d5"]

[sub_resource type="Theme" id="Theme_an7of"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/font_sizes/font_size = 35

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i4n4n")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_xb7i7")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qy7d5")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0.341176, 0.513726, 0.847059, 1)
theme_override_colors/font_shadow_color = Color(0.67451, 0.741176, 1, 1)
theme_override_colors/font_outline_color = Color(0.341176, 0.513726, 0.847059, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_nwvu0")
theme_override_font_sizes/font_size = 125
text = "ROGUE REEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayBTN" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_qy7d5")
theme_override_font_sizes/font_size = 35
text = "Level Select
"

[node name="SettingsBTN" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 35
text = "Settings"

[node name="QuitBTN" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 35
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qy7d5")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0.341176, 0.513726, 0.847059, 1)
theme_override_colors/font_shadow_color = Color(0.67451, 0.752941, 0.960784, 1)
theme_override_colors/font_outline_color = Color(0.341176, 0.513726, 0.847059, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_nwvu0")
theme_override_font_sizes/font_size = 60
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme = SubResource("Theme_an7of")
text = "Work in progress"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HScrollBar" type="HScrollBar" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/Label2"]
layout_mode = 2
offset_top = 83.0
offset_right = 480.0
offset_bottom = 91.0

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "work in progress
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HScrollBar" type="HScrollBar" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer2/Label2"]
layout_mode = 2
offset_top = 83.0
offset_right = 480.0
offset_bottom = 91.0

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="BackBTN" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 4.9
theme_override_font_sizes/font_size = 35
text = "Back"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PlayBTN" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PlayBTN" to="CanvasLayer" method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsBTN" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsBTN" to="CanvasLayer" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitBTN" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitBTN" to="CanvasLayer" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/BackBTN" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/BackBTN" to="CanvasLayer" method="_on_back_btn_pressed"]
